[package]
authors = ["kushurox"]
edition = "2018"
readme = "README.md"
name = "fs_with_ui"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-alloc = "0.6.0"
embedded-graphics = "0.8.1"
panic-probe = "1.0.0"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f411", "defmt"] }
tinytga = "0.5.0"

[features]
default = ["stm32f411"]

stm32f411 = ["stm32f4xx-hal/stm32f411"]


# this lets you use `cargo fix`!
[[bin]]
name = "fs_with_ui"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
